# tiny_pybind_example

./: CMakeLists.txt  LICENSE  README.md  setup.py
docker/: Dockerfile  README.md
src/: module.cpp
tiny_pybind_example1/: CMakeLists.txt  README.md  setup.py
tiny_pybind_example1/examples/: add_sub_example.py
tiny_pybind_example1/src/: module.cpp
tiny_pybind_example1/tests/: test_add_sub.py
tiny_pybind_example2/: CMakeLists.txt  README.md  setup.py
tiny_pybind_example2/examples/: link_other_lib_example.py  link_self_lib_example.py
tiny_pybind_example2/src/: module.cpp
tiny_pybind_example2/testlib1/: CMakeLists.txt
tiny_pybind_example2/testlib1/include/: testlib1.h
tiny_pybind_example2/testlib1/src/: testlib1.cpp
tiny_pybind_example2/tests/: test_link_self_lib.py
tiny_pybind_example3/: CMakeLists.txt  README.md  setup.py
tiny_pybind_example3/examples/: add1d_example.py
tiny_pybind_example3/src/: module.cpp
tiny_pybind_example3/tests/: test_add1d.py
tiny_pybind_example4/: CMakeLists.txt  README.md  setup.py
tiny_pybind_example4/examples/: throws_out_of_range_example.py
tiny_pybind_example4/src/: module.cpp
tiny_pybind_example4/tests/: test_throws_out_of_range.py
tiny_pybind_example5/: CMakeLists.txt  README.md  setup.py
tiny_pybind_example5/examples/: kwargs_example.py
tiny_pybind_example5/src/: module.cpp
tiny_pybind_example5/tests/: test_kwargs.py
